Codebase cleanup, update dependencies, drop pre 1.18.2 support